--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,3 +82,10 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+@misc{censi2022applied,
+  title={Applied compositional thinking for engineers},
+  author={Censi, Andrea and Lorand, Jonathan and Zardini, Gioele},
+  year={2022},
+  preview={act4e_logo.png}
+}
