--- a/_posts/2015-05-15-images.md
+++ b/_posts/2015-05-15-images.md
@@ -3,8 +3,8 @@ layout: post
 title:  a post with images
 date: 2015-05-15 21:01:00
 description: this is what included images could look like
-tags: formatting images
-categories: sample-posts
+tags: 📑formatting images
+categories: 📋sample-posts
 thumbnail: assets/img/9.jpg
 ---
 This is an example post with image galleries.
