--- a/_posts/2015-07-15-code.md
+++ b/_posts/2015-07-15-code.md
@@ -3,8 +3,8 @@ layout: post
 title: a post with code
 date: 2015-07-15 15:09:00
 description: an example of a blog post with some code
-tags: formatting code
-categories: sample-posts
+tags: 📑formatting code
+categories: 📋sample-posts
 featured: true
 ---
 This theme implements a built-in Jekyll feature, the use of Rouge, for syntax highlighting.
