--- a/_posts/2023-04-25-audios.md
+++ b/_posts/2023-04-25-audios.md
@@ -3,8 +3,8 @@ layout: post
 title:  a post with audios
 date: 2023-04-25 10:25:00
 description: this is what included audios could look like
-tags: formatting audios
-categories: sample-posts
+tags: 📑formatting audios
+categories: 📋sample-posts
 ---
 This is an example post with audios. It supports local audio files.
 
