deleted most of the template posts, added skeleton for new posts

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,11 +1,12 @@
 ---
 layout: distill
 title: a distill-style blog post
-description: an example of a distill-style blog post and main elements
-tags: distill 📑formatting
-giscus_comments: true
 date: 2021-05-22
-featured: true
+description: an example of a distill-style blog post and main elements
+tags: formatting📑
+categories: sample-posts📋
+giscus_comments: true
+featured: false
 
 authors:
   - name: Albert Einstein
