update for fs2024

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -89,3 +89,19 @@
   year={2022},
   preview={act4e_logo.png}
 }
+
+@inproceedings{Baumann2009TheSystems,
+    title = {{The multikernel: a new OS architecture for scalable multicore systems}},
+    year = {2009},
+    booktitle = {Proceedings of the ACM SIGOPS 22nd Symposium on Operating Systems Principles},
+    author = {Baumann, Andrew and Barham, Paul and Dagand, Pierre-Evariste and Harris, Tim and Isaacs, Rebecca and Peter, Simon and Roscoe, Timothy and Sch{\"{u}}pbach, Adrian and Singhania, Akhilesh},
+    pages = {29--44},
+    series = {SOSP '09},
+    publisher = {Association for Computing Machinery},
+    url = {https://doi.org/10.1145/1629575.1629579},
+    address = {New York, NY, USA},
+    isbn = {9781605587523},
+    doi = {10.1145/1629575.1629579},
+    keywords = {message passing, multicore processors, scalability},
+    preview={Barrelfish_logo.png}
+}
